--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
     }],
     "require": {
         "duncan3dc/helpers": "~1.4",
-        "illuminate/view": "~4.2",
+        "illuminate/view": "~5.0",
+        "illuminate/events": "~5.0",
         "php": ">=5.4.0"
     },
     "autoload": {
