--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,8 @@
         "role": "Developer"
     }],
     "require": {
-        "duncan3dc/helpers": ">=1.3.6",
-        "illuminate/view": "4.2.*",
+        "duncan3dc/helpers": "~1.4",
+        "illuminate/view": "~4.2",
         "php": ">=5.4.0"
     },
     "autoload": {
