Use the very latest version of composer when testing

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ env:
   - COMPOSER_OPTS="--prefer-lowest"
 
 install:
-  - composer self-update
+  - composer self-update --snapshot
   - composer update $COMPOSER_OPTS
 
 script:
