--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "illuminate/contracts": ">=5.1,<5.4",
         "illuminate/view": ">=5.1,<5.4",
         "illuminate/events": ">=5.1,<5.4",
-        "php": ">=5.6.0"
+        "php": "^5.6|^7.0"
     },
     "require-dev": {
         "mockery/mockery": "^0.9.5",
