--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,6 @@ php:
   - 7.1
   - hhvm
 
-sudo: false
-
 env:
   - LARAVEL_VERSION=""
   - LARAVEL_VERSION="5.1"
@@ -26,3 +24,6 @@ script:
 
 git:
   depth: 5
+
+dist: trusty
+sudo: false
