--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         "illuminate/events": ">=5.5,<5.6",
         "illuminate/filesystem": ">=5.5,<5.6",
         "illuminate/view": ">=5.5,<5.6",
-        "php": "^5.6|^7.0"
+        "php": "^7.0"
     },
     "require-dev": {
         "duncan3dc/object-intruder": "^0.1.0",
