--- a/composer.json
+++ b/composer.json
@@ -12,9 +12,10 @@
         "role": "Developer"
     }],
     "require": {
-        "illuminate/contracts": ">=5.1,<5.5",
-        "illuminate/view": ">=5.1,<5.5",
-        "illuminate/events": ">=5.1,<5.5",
+        "illuminate/contracts": ">=5.5,<5.6",
+        "illuminate/events": ">=5.5,<5.6",
+        "illuminate/filesystem": ">=5.5,<5.6",
+        "illuminate/view": ">=5.5,<5.6",
         "php": "^5.6|^7.0"
     },
     "require-dev": {
