--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
     "require-dev": {
         "duncan3dc/object-intruder": "^0.1.0",
         "mockery/mockery": "^0.9.5",
-        "phpunit/phpunit": "^5.5"
+        "phpunit/phpunit": "^5.5",
+        "satooshi/php-coveralls": "^1.0"
     },
     "autoload": {
         "psr-4": {
