Update the docs to version 4.1.0

--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -10,6 +10,7 @@ Static:
   Setup: /static/setup/
   Usage: /static/usage/
 
-Extra:
-  Namespaces: /extra/namespaces/
-  Assets: /extra/assets/
+Directives:
+  Introduction: /directives/
+  Namespaces: /directives/namespaces/
+  Assets: /directives/assets/
