--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
     },
     "require-dev": {
         "duncan3dc/object-intruder": "^0.3.0",
+        "maglnet/composer-require-checker": "^0.1.6",
         "mockery/mockery": "^1.0",
         "phpunit/phpunit": "^6.4",
         "satooshi/php-coveralls": "^1.0"
