--- a/composer.json
+++ b/composer.json
@@ -22,8 +22,8 @@
         "duncan3dc/object-intruder": "^0.3.0",
         "maglnet/composer-require-checker": "^0.1.6",
         "mockery/mockery": "^1.0",
-        "phpunit/phpunit": "^6.4",
-        "satooshi/php-coveralls": "^1.0"
+        "php-coveralls/php-coveralls": "^2.0",
+        "phpunit/phpunit": "^6.4"
     },
     "autoload": {
         "psr-4": {"duncan3dc\\Laravel\\": "src/"}
