--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ matrix:
 env:
   - LARAVEL_VERSION=""
   - LARAVEL_VERSION="5.5"
+  - LARAVEL_VERSION="5.6"
 
 install:
   - composer self-update --snapshot
