--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ env:
   - LARAVEL_VERSION=""
   - LARAVEL_VERSION="5.5"
   - LARAVEL_VERSION="5.6"
+  - LARAVEL_VERSION="5.7"
 
 install:
   - composer self-update --snapshot
