Move the dependency checker to a build stage

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,10 +22,14 @@ install:
 
 script:
   - vendor/bin/phpunit
-  - vendor/bin/composer-require-checker
 
 jobs:
   include:
+
+    - stage: dependencies
+      script:
+        - vendor/bin/composer-require-checker
+
     - stage: coverage
       script:
         - vendor/bin/phpunit --coverage-clover=coverage.xml
