--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "duncan3dc/object-intruder": "^0.3.0",
         "maglnet/composer-require-checker": "^1.1",
         "mockery/mockery": "^1.2",
+        "squizlabs/php_codesniffer": "^3.4",
         "phpunit/phpunit": "^7.3"
     },
     "autoload": {
