--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,9 @@
         "duncan3dc/object-intruder": "^0.3.0",
         "maglnet/composer-require-checker": "^1.1",
         "mockery/mockery": "^1.2",
+        "phpstan/phpstan": "^0.10",
+        "phpstan/phpstan-mockery": "^0.10",
+        "phpstan/phpstan-phpunit": "^0.10",
         "squizlabs/php_codesniffer": "^3.4",
         "phpunit/phpunit": "^7.3"
     },
