--- a/composer.json
+++ b/composer.json
@@ -33,5 +33,14 @@
     },
     "autoload-dev": {
         "psr-4": {"duncan3dc\\LaravelTests\\": "tests/"}
+    },
+    "scripts": {
+        "test": [
+            "vendor/bin/phpunit",
+            "vendor/bin/composer-require-checker",
+            "vendor/bin/phpstan analyse --level=max src",
+            "vendor/bin/phpstan analyse --level=max --configuration=phpstan-tests.neon tests",
+            "vendor/bin/phpcs --standard=phpcs.xml"
+        ]
     }
 }
