--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ env:
   - LARAVEL_VERSION="5.5"
   - LARAVEL_VERSION="5.6"
   - LARAVEL_VERSION="5.7"
+  - LARAVEL_VERSION="5.8"
 
 install:
   - travis/laravel.php
