--- a/composer.json
+++ b/composer.json
@@ -22,9 +22,9 @@
         "duncan3dc/object-intruder": "^0.3.0",
         "maglnet/composer-require-checker": "^2.0",
         "mockery/mockery": "^1.2",
-        "phpstan/phpstan": "^0.11",
-        "phpstan/phpstan-mockery": "^0.11",
-        "phpstan/phpstan-phpunit": "^0.11",
+        "phpstan/phpstan": "^0.12.30",
+        "phpstan/phpstan-mockery": "^0.12.5",
+        "phpstan/phpstan-phpunit": "^0.12.11",
         "squizlabs/php_codesniffer": "^3.4",
         "phpunit/phpunit": "^8.3"
     },
@@ -38,7 +38,7 @@
         "test": [
             "vendor/bin/phpunit",
             "vendor/bin/composer-require-checker",
-            "vendor/bin/phpstan analyse --level=max src",
+            "vendor/bin/phpstan analyse --level=max --configuration=phpstan-src.neon src",
             "vendor/bin/phpstan analyse --level=max --configuration=phpstan-tests.neon tests",
             "vendor/bin/phpcs --standard=phpcs.xml"
         ]
