--- a/composer.json
+++ b/composer.json
@@ -12,10 +12,10 @@
         "role": "Developer"
     }],
     "require": {
-        "illuminate/contracts": "^7.0",
-        "illuminate/events": "^7.0",
-        "illuminate/filesystem": "^7.0",
-        "illuminate/view": "^7.0",
+        "illuminate/contracts": "^6.0 || ^7.0",
+        "illuminate/events": "^6.0 || ^7.0",
+        "illuminate/filesystem": "^6.0 || ^7.0",
+        "illuminate/view": "^6.0 || ^7.0",
         "php": "^7.2"
     },
     "require-dev": {
