--- a/composer.json
+++ b/composer.json
@@ -16,16 +16,16 @@
         "illuminate/events": "^6.0 || ^7.0",
         "illuminate/filesystem": "^6.0 || ^7.0",
         "illuminate/view": "^6.0 || ^7.0",
-        "php": "^7.3"
+        "php": "^7.3 || ^8.0"
     },
     "require-dev": {
-        "duncan3dc/object-intruder": "^0.3.0",
-        "maglnet/composer-require-checker": "^2.0",
-        "mockery/mockery": "^1.2",
-        "phpstan/phpstan": "^0.12.30",
+        "duncan3dc/object-intruder": "^0.3.0 || ^1.0",
+        "maglnet/composer-require-checker": "^2.0 || ^3.0",
+        "mockery/mockery": "^1.4",
+        "phpstan/phpstan": "^0.12.40",
         "phpstan/phpstan-mockery": "^0.12.5",
         "phpstan/phpstan-phpunit": "^0.12.11",
-        "squizlabs/php_codesniffer": "^3.4",
+        "squizlabs/php_codesniffer": "^3.6",
         "phpunit/phpunit": "^8.3"
     },
     "autoload": {
