--- a/composer.json
+++ b/composer.json
@@ -12,10 +12,10 @@
         "role": "Developer"
     }],
     "require": {
-        "illuminate/contracts": "^6.0 || ^7.0",
-        "illuminate/events": "^6.0 || ^7.0",
-        "illuminate/filesystem": "^6.0 || ^7.0",
-        "illuminate/view": "^6.0 || ^7.0",
+        "illuminate/contracts": "^8.0 || ^9.0 || ^10.0",
+        "illuminate/events": "^8.0 || ^9.0 || ^10.0",
+        "illuminate/filesystem": "^8.0 || ^9.0 || ^10.0",
+        "illuminate/view": "^8.0 || ^9.0 || ^10.0",
         "php": "^7.3 || ^8.0"
     },
     "require-dev": {
